--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   "dependencies": {
     "@airgram/web": "^4.0.1",
     "airgram": "^4.0.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "@airgram/core": "^4.0.0",
+    "tdweb": "~1.6.10"
   },
+  "gitHead": "6846de77456bc6d903be47856b7644e6fa61248e",
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.0",
     "babel-core": "^6.26.3",
@@ -38,7 +41,7 @@
     "istanbul-instrumenter-loader": "^3.0.0",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.22.1",
-    "tdweb": "^1.7.2",
+    "@types/tdweb": "1.4.0",
     "webpack": "^4.17.0",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.1.0",
